[gd_scene load_steps=8 format=3 uid="uid://5s7t68agfkb2"]

[ext_resource type="Script" uid="uid://dvajwct83mit2" path="res://menus/main_menu/main_menu.gd" id="1_oic2i"]
[ext_resource type="PackedScene" uid="uid://doxhfoom6rwew" path="res://menus/menu.tscn" id="1_xbn2l"]
[ext_resource type="PackedScene" uid="uid://dyitte580taon" path="res://menus/achievements_menu/achievements_menu.tscn" id="2_ml8bw"]
[ext_resource type="PackedScene" uid="uid://yjbhgaa0ptx4" path="res://menus/simple_settings_menu/simple_settings_menu.tscn" id="3_oic2i"]
[ext_resource type="PackedScene" uid="uid://xt67inn1itc" path="res://menus/credits_menu.tscn" id="4_er5qh"]
[ext_resource type="PackedScene" uid="uid://bmtqj1h3365pr" path="res://menus/load_game_menu/load_game_menu.tscn" id="6_er5qh"]

[sub_resource type="LabelSettings" id="LabelSettings_1nwmw"]
font_size = 52

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oic2i")

[node name="Menus" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IndexMenu" parent="Menus" instance=ExtResource("1_xbn2l")]
unique_name_in_owner = true
layout_mode = 1

[node name="BackButton" parent="Menus/IndexMenu" index="0"]
visible = false

[node name="Title" parent="Menus/IndexMenu" index="1"]
offset_left = -94.5
offset_top = -257.0
offset_right = 94.5
offset_bottom = -232.0
text = "Game Name"
label_settings = SubResource("LabelSettings_1nwmw")
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Menus/IndexMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -148.0
offset_right = 121.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/IndexMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="Menus/IndexMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Continue"

[node name="NewGameButton" type="Button" parent="Menus/IndexMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "New Game"

[node name="LoadGameButton" type="Button" parent="Menus/IndexMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Load Game"

[node name="SettingsButton" type="Button" parent="Menus/IndexMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="AchievementsButton" type="Button" parent="Menus/IndexMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Achievements"

[node name="CreditsButton" type="Button" parent="Menus/IndexMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Credits"

[node name="MakingOfButton" type="Button" parent="Menus/IndexMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Making Of"

[node name="ExitButton" type="Button" parent="Menus/IndexMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Exit"

[node name="AchievementsMenu" parent="Menus" instance=ExtResource("2_ml8bw")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="SettingsMenu" parent="Menus" instance=ExtResource("3_oic2i")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="CreditsMenu" parent="Menus" instance=ExtResource("4_er5qh")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="LoadGameMenu" parent="Menus" instance=ExtResource("6_er5qh")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[editable path="Menus/IndexMenu"]
